--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,8 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "R7 Fullstack", root_path, class:"nav-link" %>
+          <%= link_to "Home", root_path, class:"nav-link" %>
         </li>
+
+        <li class="nav-item">
+          <%= link_to "Posts", posts_path, class:"nav-link" %>
+        </li>
+
         <li class="nav-item">
           <%= link_to "About", about_path, class:"nav-link" %>
         </li>        
@@ -24,6 +29,7 @@
             Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
