--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
+    <header>
+      <%= render "layouts/navbar" %>
+      <%= render "layouts/alerts" %>
+    </header>
     <main>
       <%= yield %>
     </main>
