Post have user, post order reverse, edit profiles, user profile views, link to profile from views, profiles have names,

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id post %>">  
-    Post made by: <%= post.user.email %>
+    Post made by: <%= link_to post.user.name, user_path(post.user) %>
     <h5><%= post.title %></h5>
     <%= pluralize(post.views, "view") %>
 
