--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,6 +21,8 @@
     <%= form.text_field :body %>
   </div>
 
+  <%= form.hidden_field :user_id, value: current_user.id %>
+
   <div>
     <%= form.submit %>
   </div>
