--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -2,11 +2,11 @@
     <% # Logged in block %>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            User
+            <%= current_user.name %>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>            
+            <li><%= link_to "Edit Profile", edit_user_registration_path, class:"dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
             <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
         </ul>
