Added rich text editing comments to posts

--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
     <% if notice || alert %>
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+        <div class="center-alerts-container" style="margin-bottom: 10px; margin-top: 10px;">
+            <span class="notice"><%= notice %></span>
+            <span class="alert"><%= alert %></span>
+        </div>
     <% end %>
-</div>
