--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,14 @@
 <div class="container">
-<p style="color: green"><%= notice %></p>
 
-<%= render @post %>
+  <%= render @post %>
 
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
-
-  <%= button_to "Destroy this post", @post, method: :delete, data: {turbo_confirm: "Are you sure?" } %>
+  <div>
+    <%= link_to "Edit this post", edit_post_path(@post) %> |
+    <%= link_to "Back to posts", posts_path %>
+    <%= button_to "Destroy this post", @post, method: :delete, data: {turbo_confirm: "Are you sure?" } %>
+  </div>
 </div>
+
+<div class="container">
+  <%= render "/comments/form", post: @post %>
 </div>
