Add edit comments with JS functionality

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,38 @@
 <div class="comment-<%= comment.id %> container" 
     style="border: 1px solid black; padding: 1em; margin: 1em;">
     <%= comment.user.name %><br />
-    <span>Posted <%= time_ago_in_words(comment.created_at) %> </span>
+
+    <% # If comment is updated then show Updated instead of Posted %>
+    <% if (comment.updated_at - comment.created_at) > 1 %>
+        <span>Updated <%= time_ago_in_words(comment.updated_at) %> ago.</span>
+    <% else %>
+        <span>Posted <%= time_ago_in_words(comment.created_at) %> ago.</span>
+    <% end %>
+
     <% if current_user == comment.user %>
-        <div class="button-group fload-end">
-            <% # Comments are nested within posts %>
-            <%= button_to "Delete", [post, comment], class:"btn btn-danger", method: :delete, data: {turbo_confirm: "Are you sure?" } %>
-        </div>        
+        <div class="button-group float-end">
+            <div class="btn-container" style="display: inline-block;">
+
+                <% # nil path, remote true will not redirect? %>
+                <%= link_to "Edit", nil, remote: true, class:"btn btn-warning", 
+                data: { controller: "comments", action: "comments#toggleForm",
+                comments_form_param: "edit-form-#{comment.id}",
+                comments_body_param: "comment-body-#{comment.id}" 
+                } %>
+
+                <% # Comments are nested within posts %>
+                <%= button_to "Delete", [post, comment], class:"btn btn-danger", method: :delete, data: {turbo_confirm: "Are you sure?" } %>
+            </div>
+        </div>  
+        <% # d-none does not display form its invisible %>      
+        <div id="edit-form-<%= comment.id %>" class="d-none" >
+            <%= render "/comments/form", post: @post, comment: comment,
+            submit_label: "Update" %>
+
+        </div>
     <% end %>
     <hr />
-    <%= comment.body %>
+    <div class="comment-body-<%= comment.id %>">
+        <%= comment.body %>    
+    </div>
 </div>
