--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,14 +3,20 @@
   <%= render @post %>
 
   <div>
-    <%= link_to "Edit this post", edit_post_path(@post) %> |
-    <%= link_to "Back to posts", posts_path %>
-    <%= button_to "Destroy this post", @post, method: :delete, data: {turbo_confirm: "Are you sure?" } %>
-  </div>
+    <% if current_user %>
+      <%= link_to "Edit this post", edit_post_path(@post) %> |
+      <%= link_to "Back to posts", posts_path %>
+      <%= button_to "Destroy this post", @post, method: :delete, data: {turbo_confirm: "Are you sure?" } %>
+    <% end %>
+  </div>  
 </div>
 
 <div class="container">
-  <%= render "/comments/form", post: @post, comment: @post.comments.build, submit_label: "Reply" %>
+  <% if current_user %>    
+      <%= render "/comments/form", post: @post, comment: @post.comments.build, submit_label: "Reply" %>
+    <% else %>
+      <h5 style="margin-top: 10px;">You must be logged in to comment. <%= link_to "Log In", new_user_session_path %></h5>
+  <% end %>
   <% @comments.each do |comment| %>    
     <%= render "/comments/comment", post: @post, comment: comment %>
   <% end %>
