Gem noticed: notifications on comment to post user

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,6 +24,7 @@
       </form>
 
       <ul class="navbar-nav">
+        <% render "layouts/notifications" %>
         <%= render "user/session_manager" %>
       </ul>
 
