Comments on post notification functionality

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,13 +18,8 @@
           <%= link_to "About", about_path, class:"nav-link" %>
         </li>        
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-
       <ul class="navbar-nav">
-        <% render "layouts/notifications" %>
+        <%= render "layouts/notifications" %>
         <%= render "user/session_manager" %>
       </ul>
 
