--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <%= link_to "About", about_path, class:"nav-link" %>
         </li>        
+        <li class="nav-item">
+          <%= link_to "Search NW", search_path, class:"nav-link" %>
+        </li>    
       </ul>
       <ul class="navbar-nav">
         <%= render "layouts/notifications" %>
