--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,26 @@
-<h1>Search#index</h1>
-<p>Find me in app/views/search/index.html.erb</p>
+<h1 class="text-center"><%= pluralize(@posts.count, "Result") %></h1>
+<div class="container col-6">
+  Search form do not work properly.
+  <%= render "search/form" %>
+</div>
 
-<%= render "search/form" %>
+<div class="container", style="margin-top: 10px;">
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr>
+        <th><%= sort_link(@query, :title, "Title", default_order: :asc) %></th>
+        <th><%= sort_link(@query, :body, "Blog Content") %></th>
+        <th><%= sort_link(@query, :user_name, "Users") %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><%= link_to post.title, post %></td>
+          <td><%= post.body.truncate_words(25) %></td>
+          <td><%= link_to post.user.name, post.user %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
