Building admin panel; posts view

--- a/app/views/admin/show_post.html.erb
+++ b/app/views/admin/show_post.html.erb
@@ -1,2 +1,41 @@
-<h1>Admin#show_post</h1>
-<p>Find me in app/views/admin/show_post.html.erb</p>
+<div class="container text-center">
+    <h3>Administrator</h3>
+    <%= render "admin/nav_links" %>
+
+    <div class="text-center mt-5">
+        <div class="btn-group">
+            <%= link_to "Edit", edit_post_path(@post), class:"btn btn-warning" %>
+            <%= button_to "Delete", @post, method: :delete, data: {turbo_confirm: "Are you sure?" }, class:"btn btn-danger" %>
+        </div>
+    </div>
+    <div class="row mt-1">
+        <p>
+            <strong>Title:</strong> <%= @post.title %>
+        </p>
+    </div>
+    <div class="row">
+        <p>
+            <strong>Post views:</strong> <%= @post.views %>
+        </p>
+    </div>
+    <div class="row">
+        <p>
+            <strong>Author:</strong> 
+            <%= "#{@post.user.name} | #{@post.user.email} | #{pluralize(@post.user.views, "User view")}" %>
+        </p>
+    </div>
+    <div class="row">       
+            <strong>Post content: </strong> <%= @post.body %>      
+    </div>
+    <div class="row">       
+        <p>
+            <strong>Post comment count: </strong> <%= pluralize(@post.comments.count, "Comment") %> 
+        </p> 
+        <p>
+        <% @post.comments.each do |comment| %>
+            <p style="margin-top: 10px;"><strong>Comment creator: </strong><%= comment.user.name %>
+            <%= comment.body %></p>
+        <% end %>     
+       </p>
+    </div>
+</div>
