--- a/app/views/admin/_nav_links.html.erb
+++ b/app/views/admin/_nav_links.html.erb
@@ -2,5 +2,12 @@
     <p>
         <%= link_to "Admin", admin_path %>
         <% # Action is method name from admin_controller. Do this if not in index %>
-        <%= " > #{params[:action]}.capitalize" unless params[:action].eql?("index") %>
+        <%= " > #{params[:action].capitalize}" unless params[:action].eql?("index") %>
+    </p>
+    <div class="btn-group">
+        <%= render "admin/link", resource: Post %>
+        <%= render "admin/link", resource: Comment %>
+        <%= render "admin/link", resource: User %>
+    </div>
+
 </div>
