--- a/app/views/admin/posts.html.erb
+++ b/app/views/admin/posts.html.erb
@@ -1,4 +1,25 @@
-<div class="container">
+<div class="container text-center">
     <h3>Administrator</h3>
-    <%= render "admin/nav_links" %>
+        <%= render "admin/nav_links" %>
+        <table class="table table-dark table-striped" style="margin-top: 10px;">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Post</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Comments</th>
+                </tr>
+            </thead>    
+            <tbody>
+                <% @posts.each do |post| %>
+                    <tr>
+                        <th scope="row"><%= post.id %></th>
+                        <th><%= link_to post.title.truncate(15), admin_post_path(post) %></th>
+                        <th><%= post.user.name %></th>
+                        <% # Size iz maybe used as count but with less database queries %>
+                        <th><%= pluralize(post.comments.size, "Comment") %></th> 
+                    </tr>
+                <% end %>
+            </tbody>
+        </table>
 </div>
