--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,2 +1,4 @@
-<h1>Admin#users</h1>
-<p>Find me in app/views/admin/users.html.erb</p>
+<div class="container">
+    <h3>Administrator</h3>
+    <%= render "admin/nav_links" %>
+</div>
