--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -18,7 +18,7 @@
         <tr>
           <td><%= link_to post.title, post %></td>
           <td><%= post.body.to_plain_text.truncate_words(25) %></td>
-          <td><%= link_to post.user.name, post.user %></td>
+          <td><%= link_to post.user.first_name, post.user %></td>
         </tr>
       <% end %>
     </tbody>
