--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -2,7 +2,7 @@
     <% # Logged in block %>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <%= current_user.name %>
+            <%= current_user.first_name %>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>            
