--- a/app/views/admin/posts.html.erb
+++ b/app/views/admin/posts.html.erb
@@ -15,7 +15,7 @@
                     <tr>
                         <th scope="row"><%= post.id %></th>
                         <th><%= link_to post.title.truncate(15), admin_post_path(post) %></th>
-                        <th><%= post.user.name %></th>
+                        <th><%= post.user.full_name %></th>
                         <% # Size iz maybe used as count but with less database queries %>
                         <th><%= pluralize(post.comments.size, "Comment") %></th> 
                     </tr>
