--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,8 +10,13 @@
     </div>
 
     <div class="field" style="margin-bottom: 10px">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autocomplete: "name" %>
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name, autocomplete: "name" %>
+    </div>
+
+    <div class="field" style="margin-bottom: 10px">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name, autocomplete: "last_name" %>
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
