--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -6,7 +6,7 @@
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>            
-            <li><%= link_to "Edit Profile", edit_user_registration_path, class:"dropdown-item" %></li>
+            <li><%= link_to "My Profile", user_path(current_user.id), class:"dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
             <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
         </ul>
