--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,17 @@
-<div class="container">
+<div class="container col-5 card mt-8" style="margin-top: 10px;">
     <h4><%= "#{@user.first_name} #{@user.last_name}" %></h4>
     <p><%= pluralize(@user.views, "view") %></p>
 </div>
+
+<% if current_user %>
+    <div class="container col-5 card mt-8">
+        <ul>
+            <%= current_user.address.street %><br>
+            <%= current_user.address.city %><br>
+            <%= current_user.address.state %><br>
+            <%= current_user.address.zip %><br>
+            <%= current_user.address.country %>
+        </ul>
+        <%= link_to "Edit Profile", edit_user_registration_path, class:"btn btn-primary" %>
+    </div>
+<% end %>
