--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,12 @@
 
         <li class="nav-item">
           <%= link_to "About", about_path, class:"nav-link" %>
-        </li>        
+        </li>  
+
+        <li class="nav-item">
+          <%= render "layouts/categories", categories: @nav_categories %>
+        </li>     
+
         <li class="nav-item">
           <%= link_to "Search NW", search_path, class:"nav-link" %>
         </li>    
