--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -1,7 +1,6 @@
-<%= search_form_for(@query, url: search_path, method: :get, class: 'd-flex') do |f| %>
-    <%= f.search_field :title_or_body_or_user_email_or_user_first_name_or_user_last_name_cont,
-       placeholder: "Search...",
-       class: "form-control me-2" %>
-    <%= f.submit "Search!", class: "btn btn-outline-success" %>
-  <% end %>
+<%= form_tag search_path, method: :get, class: 'd-flex' do %>
+   <%= text_field_tag 'q[title_or_body_or_user_email_or_user_first_name_or_user_last_name]', params.dig(:q, :title_or_body_or_user_email_or_user_first_name_or_user_last_name), placeholder: "Search...", class: "form-control me-2" %>
+
+   <%= submit_tag "Search!", class: "btn btn-outline-success" %>
+ <% end %>
   
