--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -14,13 +14,17 @@
       </tr>
     </thead>
     <tbody>
+    <% if @posts.any? %>
       <% @posts.each do |post| %>
         <tr>
           <td><%= link_to post.title, post %></td>
           <td><%= post.body.to_plain_text.truncate_words(25) %></td>
           <td><%= link_to post.user.first_name, post.user %></td>
-        </tr>
-      <% end %>
+        </tr>  
+      <% end %>    
+    <% else %>
+      <p>No results found.</p>
+    <% end %>
     </tbody>
   </table>
 </div>
