--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,6 +15,13 @@
     <%= form.label :title, style: "display: block" %>
     <%= form.text_field :title %>
   </div>
+
+  <div>
+    <%= form.label :category, style: "display: block" %>
+    <%= form.select :category_id, options_for_select(Category.all.order(name: :asc)
+            .collect { |cat| [cat.name, cat.id] }) %>
+  </div>
+
   <br>
   <div>
     <%= form.label :body, style: "display: block" %>
