--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -10,16 +10,18 @@
       <tr>
         <th><%= sort_link(@query, :title, "Title", default_order: :asc) %></th>
         <th><%= sort_link(@query, :body, "Blog Content") %></th>
-        <th><%= sort_link(@query, :user_name, "Users") %></th>
+        <th><%= sort_link(@query, :category_name, "Category") %></th>
+        <th><%= sort_link(@query, :user_full_name, "Users") %></th>
       </tr>
     </thead>
     <tbody>
     <% if @posts.any? %>
-      <% @posts.each do |post| %>
+      <% @posts.includes(:category).each do |post| %>
         <tr>
           <td><%= link_to post.title, post %></td>
+          <td><%= link_to post.category.name, post.category %></td>
           <td><%= post.body.to_plain_text.truncate_words(25) %></td>
-          <td><%= link_to post.user.first_name, post.user %></td>
+          <td><%= link_to post.user.full_name, post.user %></td>
         </tr>  
       <% end %>    
     <% else %>
