--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -5,7 +5,8 @@
             <%= current_user.full_name %>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>            
+            <li><%= link_to "New post", new_post_path, class:"dropdown-item" %></li>
+            <li><%= link_to "New Category", new_category_path, class:"dropdown-item" if current_user&.admin? %></li>            
             <li><%= link_to "My Profile", user_path(current_user.id), class:"dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
             <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
