--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,10 +1,20 @@
-<div class="container col-5 card mt-8" style="margin-top: 10px;">
+<div class="container col-7 card mt-8" style="margin-top: 10px;">
     <h4><%= "#{@user.first_name} #{@user.last_name}" %></h4>
-    <p><%= pluralize(@user.views, "view") %></p>
+    <h6><%= pluralize(@user.views, "view") %> | 
+    <%= pluralize(@user.comments.size, "Comment") %> | 
+    <%= pluralize(@total_posts, "Post") %> | 
+    <%= pluralize(@total_views, "Total Post View") %></h6>
 </div>
-
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-7">
+        Avatar here >> NW
+            <%= image_tag(@user.avatar, style:"width:150px; height:150px; border-radius:100%") if @user.avatar.attached %>
+        </div>
+    </div>
+</div>
 <% if current_user %>
-    <div class="container col-5 card mt-8">
+    <div class="container col-7 card mt-8">
         <ul>
             <%= current_user.address.street %><br>
             <%= current_user.address.city %><br>
@@ -15,3 +25,16 @@
         <%= link_to "Edit Profile", edit_user_registration_path, class:"btn btn-primary" %>
     </div>
 <% end %>
+
+<div class="container col-7 card", style="margin-top: 8px">
+    <div class="col-1"></div>
+    <div class="container">
+        <% @posts.each do |post| %>
+            <%= link_to post.title, post %><br>
+            <%= "Post created #{time_ago_in_words(post.created_at)} ago." %><br>
+            <%= post.body.to_plain_text.truncate_words(100) %><br><br>
+        <% end %>
+    </div>
+    <div class="col-1"></div>
+</div>
+
