Fix variable name, finish subscription functionality

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,6 +26,10 @@
           <%= link_to "Search NW", search_path, class:"nav-link" %>
         </li>    
 
+        <li class="nav-item">
+          <%= link_to "Members", members_dashboard_path, class:"nav-link" %>
+        </li>         
+
         <% if current_user %>
           <li class="nav-item">
             <%= link_to "Admin", admin_path, class:"nav-link" if current_user.admin? %>
