Added admin analytics; ahoy, groupdate, chartkick gem

--- a/app/views/admin/posts.html.erb
+++ b/app/views/admin/posts.html.erb
@@ -1,4 +1,5 @@
 <div class="container text-center">
+app\views\admin\posts.html.erb
     <h3>Administrator</h3>
         <%= render "admin/nav_links" %>
         <table class="table table-dark table-striped" style="margin-top: 10px;">
