--- a/app/views/admin/comments.html.erb
+++ b/app/views/admin/comments.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center">
     <h3>Administrator</h3>
     <%= render "admin/nav_links" %>
 </div>
