--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container text-center">
     <h3>Administrator</h3>
     <%= render "admin/nav_links" %>
+    <%= render "admin/total_daily_views" %>
 </div>
