Finish admin analytics page load view

--- a/app/views/admin/_total_daily_views.html.erb
+++ b/app/views/admin/_total_daily_views.html.erb
@@ -1,2 +1,2 @@
 <%# method from model post.rb %>
-<%= line_chart Post.total_views_by_day %>
+<%= area_chart Post.total_views_by_day, colors: ["#a00a"] %>
