--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,15 @@
 <div class="container">
-  <h1>Projects</h1>
+  <h1>Projects</h1> 
   <p>app\views\projects\index.html.erb</p>
 
   <div id="projects">
     <div class="card" style="width: 36rem;">
       <% @projects.each do |project| %>
-        <%= render project %>  
+        <% if current_user&.admin? %>
+          <%= render "projects/draggable", project: project %>
+        <% else %>
+          <%= render project %>  
+        <% end %>
       <% end %>
     </div>
   </div>
