--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,6 +5,7 @@
   <div id="projects">
     <div class="card" style="width: 36rem;">
       <% @projects.each do |project| %>
+        <%= debug(project.title) %>
         <% if current_user&.admin? %>
           <%= render "projects/draggable", project: project %>
         <% else %>
