--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,9 @@
 <div id="<%= dom_id post %>">  
     Post made by: <%= link_to post.user.full_name, user_path(post.user) %>    
     <h5><%= post.title %></h5>
+    <% post.images.each do |image| %>
+      <%= image_tag(image, style:"width:300px; height: auto")%>
+    <% end %>
   <div>
     <%= post.body %>
   </div>
